<resources>
    <string name="app_name">DevMark</string>

    <!-- 네비게이션 바 -->
    <string name="navi_recommend">추천</string>
    <string name="navi_workspace">워크스페이스</string>
    <string name="navi_remind">리마인드</string>

    <!-- 워크스페이스 선택 페이지 -->
    <string name="select_workspace_my_title">내 워크스페이스</string>
    <string name="select_workspace_now_title">현재 워크스페이스</string>
    <string name="select_workspace_btn_create">워크스페이스 생성</string>
    <string name="select_workspace_btn_enter">워크스페이스 참여</string>
    <string name="workspace_total_bookmark">총 북마크 수</string>
    <string name="workspace_total_people">참여 인원</string>

    <!-- 워크스페이스 목록 조회 -->
    <string name="filter_sort">최신순</string>
    <string name="filter_member">멤버</string>
    <string name="filter_category">카테고리</string>

    <!-- 워크스페이스 관리 페이지 -->
    <string name="text_tb_workspace_setting">워크스페이스 관리</string>
    <string name="now_workspace_workspace_setting">현재 워크스페이스</string>
    <string name="bookmark_info_workspace_setting">북마크 정보</string>
    <string name="total_bookmark_workspace_setting">총 북마크 수</string>
    <string name="invite_workspace_setting">초대 코드 발급</string>
    <string name="bookmark_code_workspace_setting">북마크 인증 코드 발급</string>
    <string name="hint_invite_workspace_setting">오른쪽 버튼을 눌러 초대 코드를 발급 받으세요</string>
    <string name="hint_bookmark_code_workspace_setting">오른쪽 버튼을 눌러 인증 코드를 발급 받으세요</string>
    <string name="exit_workspace_setting">워크스페이스 나가기</string>
    <string name="num_bookmark_info">%s 개</string>

    <!-- 추천 포스트 페이지 -->
    <string name="text_tb_recommend">추천 포스트</string>
    <string name="text_top_category">내 상위 카테고리</string>
    <string name="num_mybookmark_category">%s 개</string>

    <!-- 리마인드 알림 페이지 -->
    <string name="text_tb_remind">리마인드</string>

    <!-- 설정 페이지 -->
    <string name="text_tb_setting">설정</string>
    <string name="text_push_alarm">푸쉬알림</string>
    <string name="text_terms_conditions">이용약관</string>
    <string name="text_signout">로그아웃</string>
    <string name="text_withdrawal">회원탈퇴</string>

    <!-- 워크스페이스 다이얼로그 -->
    <string name="text_workspace_join_title">초대 코드 입력</string>
    <string name="text_workspace_btn_yes">확인</string>
    <string name="text_workspace_btn_no">닫기</string>
    <string name="text_workspace_btn_add">생성</string>
    <string name="text_workspace_add_title">워크스페이스 이름</string>
    <string name="text_workspace_add_desc">워크스페이스 설명</string>

    <!-- 북마크 상세 페이지 -->
    <string name="text_tb_bookmark">북마크 상세 페이지</string>
    <string name="toggle_readable">읽음</string>

    <string name="dummy_summary">
        NestedScrollView는 ScrollView와 비슷하지만, ScrollView 안에서 스크롤 가능한 뷰를 더 잘 처리할 수 있습니다.\n
ScrollView 안에 RecyclerView를 사용하면 RecyclerView만 스크롤되고 ScrollView는 스크롤되지 않는 문제가 발생할 수 있습니다.\n
NestedScrollView를 사용하면 RecyclerView와 함께 모든 뷰가 함께 스크롤됩니다.\n
NestedScrollView 사용법은 ScrollView와 거의 비슷하며, RecyclerView의 nestedScrollingEnabled 속성을 false로 설정해야 합니다.\n
NestedScrollView 안에 RecyclerView를 사용하는 것은 성능 문제가 발생할 수 있으므로, 아이템이 많은 경우에는 지양해야 합니다.\n
아이템이 많은 경우에는 RecyclerView에서 여러 개의 ViewHolder를 사용하여 구현할 수 있습니다.\n
결론적으로 NestedScrollView는 RecyclerView와 함께 사용할 때 편리하며, 성능을 위해 아이템이 많은 경우에는 여러 개의 ViewHolder를 사용하는 것이 좋습니다.
    </string>

    <!-- 댓글 페이지 -->
    <string name="text_btn_modify">수정</string>
    <string name="text_btn_delete">삭제</string>
    <string name="text_btn_post">게시</string>

    <string name="edit_text_hint">댓글 남기기</string>
    <string name="edit_text_hint_modify">댓글 수정하기</string>

    <string name="text_time_day">%s일 전</string>
    <string name="text_time_hour">%s시간 전</string>
    <string name="text_time_min">%s분 전</string>
    <string name="text_time_now">방금</string>

    <!-- 회원 탈퇴 다이얼로그 -->
    <string name="dialog_ws_exit_title">워크스페이스 나가기</string>
    <string name="dialog_ws_exit_comment">해당 워크스페이스에 저장된 북마크가\n삭제됩니다.</string>
    <string name="dialog_ws_exit_no">아니요</string>
    <string name="dialog_ws_exit_yes">예</string>

</resources>