<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_round"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_dialog_add_title"
            style="@style/bold_16_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_workspace_add_title"
            android:textColor="@color/taupe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_dialog_add_title"
            style="@style/bold_16_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/dialog_btn_round"
            android:maxLength="15"
            android:padding="8dp"
            android:textColor="@color/taupe"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_add_title" />

        <TextView
            android:id="@+id/tv_dialog_add_desc"
            style="@style/bold_16_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_workspace_add_desc"
            android:textColor="@color/taupe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_dialog_add_title" />

        <EditText
            android:id="@+id/et_dialog_add_desc"
            style="@style/bold_16_dialog"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/dialog_btn_round"
            android:ellipsize="end"
            android:maxLength="50"
            android:maxLines="2"
            android:padding="8dp"
            android:textColor="@color/taupe"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_add_desc" />

        <Button
            android:id="@+id/btn_dialog_create"
            style="@style/bold_16_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/dialog_btn_round"
            android:stateListAnimator="@null"
            android:text="@string/text_workspace_btn_add"
            android:textColor="@color/taupe"
            app:layout_constraintEnd_toStartOf="@id/btn_dialog_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_dialog_add_desc" />

        <Button
            android:id="@+id/btn_dialog_no"
            style="@style/bold_16_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_btn_round"
            android:stateListAnimator="@null"
            android:text="@string/text_workspace_btn_no"
            android:textColor="@color/taupe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_dialog_create"
            app:layout_constraintTop_toTopOf="@id/btn_dialog_create" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>