<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Toolbar
            android:id="@+id/tb_workspace_select"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/platinum"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tb_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/app_name"
                android:textColor="@color/taupe"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:background="@color/platinum"
                android:importantForAccessibility="no"
                android:padding="16dp"
                android:src="@drawable/ic_setting" />
        </Toolbar>


        <TextView
            android:id="@+id/tv_now_workspace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_semibold"
            android:padding="12dp"
            android:text="@string/select_workspace_now_title"
            android:textColor="@color/rust"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_workspace_select" />


        <TextView
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/rust"
            app:layout_constraintTop_toBottomOf="@id/tv_now_workspace" />

        <include
            android:id="@+id/ic_now_workspace"
            layout="@layout/item_workspace"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_margin="12dp"
            app:layout_constraintBottom_toTopOf="@id/tv_my_workspace"
            app:layout_constraintTop_toBottomOf="@id/view" />


        <TextView
            android:id="@+id/tv_my_workspace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_semibold"
            android:padding="12dp"
            android:text="@string/select_workspace_my_title"
            android:textColor="@color/rust"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_now_workspace" />

        <TextView
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/rust"
            app:layout_constraintTop_toBottomOf="@id/tv_my_workspace" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_workspace"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>